# uk-ai-study

./: .gitignore  README.md  REVISION_PLAN.md  pyproject.toml
analysis/: appendix.py  artifact_manifest.py  build_pss_crosswalk.py  build_ripple_routing.py  caseloads.py  emit_tex_values.py  figstyle.py  figures.py  gender.py  geo_choropleth.py  geo_impact.py  incidence_scenarios.py  index_sensitivity.py  measured_incidence.py  mixed_wage_adjustment.ipynb  monte_carlo_families.py  paper_scenarios.py  policy_counterfactuals.py  rebuild.py  regenerate_all.sh  replicate_gov_spending_5yr.py  replicate_jr16.py  robustness.py  run_all.py  sensitivity_duration_reforms.py  sensitivity_duration_takeup.py  sensitivity_enhanced_dataset.py  sensitivity_mixed_wage_adjustment.py  sensitivity_wage_tier.py  tax_composition.py
paper/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  referee_report.md  text_review.md  values_generated.tex
paper/archive/: EXTENSIONS_SUMMARY_round2.md
paper/sections/: appendix.tex  discussion.tex  intro.tex  literature.tex  methodology.tex  policy.tex  references.tex  results.tex  (+1 more)
results/: BUILD_MANIFEST.json  EXTENSIONS_SUMMARY.md  central.json  central_ripple.json  central_ripple_high.json  central_ripple_low.json  central_youth_tilted.json  high.json  low.json  wage_margin_central.json  wage_margin_pss.json
tests/: test_artifact_manifest.py  test_incidence_scenarios.py  test_monte_carlo_summary.py  test_per_capita_income.py  test_policy_counterfactuals.py  test_shocks.py
uk_ai_study/: __init__.py  exposure.py  runner.py  shocks.py
(+72 files in other folders)
